--- a/Module 5 - Homework.ipynb
+++ b/Module 5 - Homework.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -67,10 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The item removed was (-3,'seven')\n"
+     ]
+    }
+   ],
+   "source": [
+    "value = pairs.pop(-3)\n",
+    "print(f\"The item removed was (-3,'{value}')\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,10 +93,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "3",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-afafb7ab7c8a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpairs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m: 3"
+     ]
+    }
+   ],
+   "source": [
+    "print(pairs[3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,10 +122,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key is found\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 'hello' in pairs.keys():\n",
+    "    print('key is found')\n",
+    "else:\n",
+    "    print('key is not found')\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,10 +156,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat -> Fluffy\n",
+      "dog -> Fido\n",
+      "bird -> Polly\n",
+      "snake -> Fred\n"
+     ]
+    }
+   ],
+   "source": [
+    "pets = {'cat' : 'Fluffy', 'dog' : 'Fido', 'bird' : 'Polly', 'snake' : 'Fred'}\n",
+    "for key, value in pets.items():\n",
+    "    print(f\"{key} -> {value}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,10 +190,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Ten': 10, 'Twenty': 20, 'Thirty': 30}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict = {}\n",
+    "keys = ['Ten', 'Twenty', 'Thirty']\n",
+    "values = [10, 20, 30]\n",
+    "for i in range(3):\n",
+    "    dict[keys[i]] = values[i]\n",
+    "print(dict)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,36 +225,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Lily': {'height': \"5'6\", 'weight': '178lbs'}, 'Morgan': {'height': \"5'9\", 'weight': '134lbs'}, 'Nicholas': {'height': \"6'1\", 'weight': '218lbs'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "patient_records = {}\n",
+    "patient_name = [\"Lily\", \"Morgan\", \"Nicholas\"]\n",
+    "patient_info = {\"5'6\" : \"178lbs\", \"5'9\" : \"134lbs\", \"6'1\" : \"218lbs\"}\n",
+    "heights = list(patient_info.keys())\n",
+    "weights = list(patient_info.values())\n",
+    "for i in range(len(patient_name)):\n",
+    "    patient_records[patient_name[i]] = {'height' : heights[i], 'weight' : weights[i]}\n",
+    "print(patient_records)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -199,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
